<?xml version="1.0"?>
<package format="3">
  <name>oculus_sonar_driver</name>
  <version>1.0.0</version>
  <description>ROS2 node that uses liboculus to interface with a Blueprint Subsea Oculus imaging sonar.</description>

  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>marine_acoustic_msgs</build_depend>
  <build_depend>apl_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>marine_acoustic_msgs</exec_depend>
  <exec_depend>apl_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
